tests/compile-fail/generated/derives-span-Ord-tuple-struct.stderr
error[E0277]: the trait bound `Error: std::cmp::Ord` is not satisfied
  --> $DIR/derives-span-Ord-tuple-struct.rs:15:5
   |
15 |     Error
   |     ^^^^^ the trait `std::cmp::Ord` is not implemented for `Error`
   |
   = note: required by `std::cmp::Ord::cmp`
